test/classes/delete-free/owned/owned-from-shared.good
owned-from-shared.chpl:4: In function 'main':
owned-from-shared.chpl:6: error: cannot adopt a shared CC?
